2009-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Don't try to build work which unfulfilled
	  dependencies.

	* Updater.cs:
	* Builder.cs:
	* DBRevisionWork.cs:
	* DBLaneDependency.cs:
	* DBWorkFile.generated.cs:
	* DBLaneDependency.generated.cs: Add a dependency_host_id to
	  lane dependencies, to specify the host the lane must have
	  succeeded on.

2009-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Added BUILD_SCRIPT_DIR.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBRevisionWork.cs: IsSuccess: Fix sql to behave like
	  IsSuccessWithFile.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs:
	* DBLane.cs:
	* Builder.cs:
	* DBWorkFile.cs:
	* FileManager.cs:
	* Configuration.cs:
	* DBRevisionWork.cs:
	* DBWorkFile.generated.cs:
	* DBLaneDependency.generated.cs: Add support for downloading
	  dependencies to a directory on the buildbot when the bot
	  starts working on a new revision.

2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Add support for BUILD_REPOSITORY_#.

	* DB.cs: Include revisionwork which is missing dependencies
	  too.

	* Updater.cs:
	* DBWorkFileView.cs:
	* DBRevisionWork.cs: Complete support for lane dependencies
	  matching exact revision.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBWork.cs: Add a ctor.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBLanefile.generated.cs: Add some simple change tracking to
	  steps.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Don't abort any threads. It just messes up
	  everything when it happens.

2009-04-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Calculate the timeout to abort the thread from
	  the timeout of each work item to execute.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Fix timeout message to not crash, and fix the
	  actual detection of the timeout too.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
