@@ -382,7 +382,7 @@ namespace Builder
 							foreach (DBWorkFile file in work_files) {
 								bool download = true;
 								foreach (string exp in dep.download_files.Split (new char [] { ' ' }, StringSplitOptions.RemoveEmptyEntries)) {
-									if (!System.Text.RegularExpressions.Regex.IsMatch (file.filename, exp)) {
+									if (!System.Text.RegularExpressions.Regex.IsMatch (file.filename, FileManager.GlobToRegExp (exp))) {
 										download = false;
 										break;
 									}
